# termux-gui-bash

./: .gitignore  CMakeLists.txt  Manual.md  README.md  TUTORIAL.md  gendocHTML.sh  tgui-bash.1.md
doc_templates/: doctemplate.html  github-markdown-dark.css  github-markdown-light.css
examples/: yt-dl-gui
src/: docviewer.sh  helper.c  tgui-bash.sh  unzip.sh
tutorial/: dialog.sh  events.sh  hello_world.sh  image.sh  linearlayout.sh  scroll.sh  widget.sh
